<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:hint="@string/input_name_text"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_text"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"/>

        <EditText
            android:id="@+id/phoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:inputType="phone"
            android:background="@drawable/widget_border"
            android:textColor="@color/black"
            android:hint="@string/input_phone_number_text"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save_text"
            android:textSize="18sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewRV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            tools:listitem="@layout/list_item" />

    </LinearLayout>

    <Button
        android:id="@+id/backBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="bottom"
        android:text="@string/back_text"

        android:textColor="@color/white"
        android:textSize="20sp" />

</FrameLayout>